# ruby_inflector

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/case/: camel.rs  class.rs  kebab.rs  mod.rs  pascal.rs  screaming_snake.rs  sentence.rs  snake.rs  table.rs  title.rs  train.rs
src/number/: deordinalize.rs  ordinalize.rs
src/string/: deconstantize.rs  demodulize.rs  pluralize.rs  singularize.rs
src/suffix/: foreign_key.rs
tests/: lib.rs
