[package]
name = "ruby_inflector"
version = "0.0.2"
authors = ["Josh Teeter<joshteeter@gmail.com>", "Chrislearn Young<chris@kenorld.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml", "README.md"]
readme = "README.md"
repository = "https://github.com/alexevanczuk/ruby_inflector"
documentation = "https://docs.rs/ruby_inflector"
homepage = "https://github.com/alexevanczuk/ruby_inflector"
license = "BSD-2-Clause"
description = """
Adds String based inflections for Rust. Snake, kebab, camel, sentence, class, title and table cases as well as ordinalize, deordinalize, demodulize, foreign key, and pluralize/singularize are supported as both traits and pure functions acting on String types.

Intended to emulate the behavior of ActiveSupport::Inflector in Ruby as closely as possible.
https://api.rubyonrails.org/classes/ActiveSupport/Inflector.html
"""
keywords = ["pluralize", "camel", "snake", "Inflector", "inflection"]
categories = ["text-processing", "value-formatting"]

[lib]
name = "ruby_inflector"

[dependencies]
regex = { version = "1" }
once_cell = { version = "1" }
